--- a/views/login.html
+++ b/views/login.html
@@ -23,7 +23,9 @@
   <body>
 
     <div class="container">
-
+      {% if alert %}
+      <div class="alert alert-danger" role="alert">{{alert}}</div>
+      {% endif %}
       <form class="form-signin" method="post" action="sign">
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
