--- a/views/login.html
+++ b/views/login.html
@@ -28,11 +28,17 @@
       {% endif %}
       <form class="form-signin" method="post" action="sign">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus name="email">
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required name="password">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <div class="form-group">
+          <label for="inputEmail" class="sr-only">Email address</label>
+          <input type="email" id="inputEmail" class="form-control" placeholder="me@example.com" required autofocus name="email">
+        </div>
+        <div class="form-group">
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input type="password" id="inputPassword" class="form-control" placeholder="123" required name="password">
+        </div>
+        <div class="form-group">
+          <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
+        </div>
       </form>
 
     </div> <!-- /container -->
