--- a/views/restricted.html
+++ b/views/restricted.html
@@ -22,7 +22,7 @@
 
   <body>
     <div class="container">
-		<h1>Restricted zone</h1>
+		<h1>Welcome to the restricted zone, {{ name }}</h1>
 		<p>This session will expire at {{expires}}.</p>
 		<p><a href="?action=logout">Logout</a></p>
 		<h2>Claims</h2>
